LuaComponentPrototype Implementation started

--- a/UnitTests-RealmsVK/UnitTests-RealmsVK.vcxproj
+++ b/UnitTests-RealmsVK/UnitTests-RealmsVK.vcxproj
@@ -61,6 +61,7 @@
     <ClCompile Include="test_FreeListAllocator.cpp" />
     <ClCompile Include="test_IComponent.cpp" />
     <ClCompile Include="test_LinearAllocator.cpp" />
+    <ClCompile Include="test_LuaComponentPrototype.cpp" />
     <ClCompile Include="test_MasqueradeAllocator.cpp" />
     <ClCompile Include="test_MeshSanitizer.cpp" />
     <ClCompile Include="test_PoolAllocator.cpp" />
