--- a/RealmsVK/RealmsVK.vcxproj
+++ b/RealmsVK/RealmsVK.vcxproj
@@ -313,7 +313,9 @@
     <ClInclude Include="Utility\FileIO\Voxelite.h" />
     <ClInclude Include="Utility\FileIO\VoxFileParser.h" />
     <ClInclude Include="Utility\ModManagement\ModContainer.h" />
-    <ClInclude Include="Utility\MultiThreading\JobSequencer.h" />
+    <ClInclude Include="Utility\MultiThreading\FIFOJobScheduler.h" />
+    <ClInclude Include="Utility\MultiThreading\IJobScheduler.h" />
+    <ClInclude Include="Utility\MultiThreading\PriorityFIFOJobScheduler.h" />
     <ClInclude Include="Utility\MultiThreading\JobSystem.h" />
     <ClInclude Include="VKExemple.h" />
     <ClInclude Include="_MemLeakMonitor.h" />
